Nivel 1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\Projects\uned\bluej317-standalone\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
D:\Projects\uned\bluej317-standalone\BlueJ\lib\bluejcore.jar;D:\Projects\uned\bluej317-standalone\BlueJ\lib\junit-4.8.2.jar;D:\Projects\uned\bluej317-standalone\BlueJ\lib\userlib\pi4j-core.jar;D:\Projects\uned\bluej317-standalone\BlueJ\lib\userlib\pi4j-device.jar;D:\Projects\uned\bluej317-standalone\BlueJ\lib\userlib\pi4j-gpio-extension.jar;D:\Projects\uned\bluej317-standalone\BlueJ\lib\userlib\pi4j-service.jar;D:\Projects\practicas\POO\Practica1\Nivel 1
-d
D:\Projects\practicas\POO\Practica1\Nivel 1\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
D:\Projects\uned\bluej317-standalone\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\Projects\practicas\POO\Practica1\Nivel 1\ColeccionVehiculos.java
<---- end of javadoc command ---->
Loading source file D:\Projects\practicas\POO\Practica1\Nivel 1\ColeccionVehiculos.java...
Constructing Javadoc information...
D:\Projects\practicas\POO\Practica1\Nivel 1\ColeccionVehiculos.java:11: error: cannot find symbol
    private ArrayList<Vehiculo> listaDeVehiculos;
            ^
  symbol:   class ArrayList
  location: class ColeccionVehiculos
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating D:\Projects\practicas\POO\Practica1\Nivel 1\doc\ColeccionVehiculos.html...
Generating D:\Projects\practicas\POO\Practica1\Nivel 1\doc\package-frame.html...
Generating D:\Projects\practicas\POO\Practica1\Nivel 1\doc\package-summary.html...
Generating D:\Projects\practicas\POO\Practica1\Nivel 1\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating D:\Projects\practicas\POO\Practica1\Nivel 1\doc\allclasses-frame.html...
Generating D:\Projects\practicas\POO\Practica1\Nivel 1\doc\allclasses-noframe.html...
Generating D:\Projects\practicas\POO\Practica1\Nivel 1\doc\index.html...
Generating D:\Projects\practicas\POO\Practica1\Nivel 1\doc\stylesheet.css...
1 warning
